<resources>
    <string name="app_name">Bistro Elevation</string>

    <string name="title_activity_splash_screen">Bistro Elevation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="title_activity_queue">Server Queue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_value1" translatable="false">132.207.89.10</string>
    <string name="server_url_value2" translatable="false">132.207.89.11</string>
    <string name="client_name">Username</string>
    <string name="emptyString" translatable="false" />
    <string name="error_message_network">Network Error</string>
    <string name="wifi_disabled">Wifi must be enabled</string>
    <string name="title_activity_local_song">Your Songs</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_black_list">Black List</string>
    <string name="title_activity_setting">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="songs_list_title">Songs List</string>
    <string name="tag_toolbar" translatable="false">tag.nav_view.toolbar</string>
    <string name="tag_drawer_layout" translatable="false">tag.layout.drawer_layout</string>
    <string name="tag_nav_view" translatable="false">tag.nav_view</string>
    <string name="action_change_state">Change State</string>
    <string name="error_message_server">Server Error - Please retry later</string>
    <string name="error_message_bad_request">Bad Request</string>
    <string name="error_message_unknown">Unknown Error</string>
    <string name="error_message_forbidden">Forbidden</string>
    <string name="error_message_unknown_user">unauthenticated user</string>
    <string name="error_message_access">access denied</string>
    <string name="error_message_deletion_refused">the song does not belong to the user or wrong song</string>
    <string name="desc_message_remove_song">Query the server to remove a song</string>
    <string name="error_message_no_ip">&lt;no IP&gt;</string>
    <string name="error_message_no_mac">&lt;no MAC&gt;</string>
    <string name="setting_title_queue_period">Update Frequency</string>
    <string name="setting_queue_period_label1">Slow (10 sec)</string>
    <string name="setting_queue_period_label2">Normal (4 sec)</string>
    <string name="setting_queue_period_label3">Quick (1 sec)</string>
    <string name="interface_name_wifi" translatable="false">wlan0</string>
    <string name="song_queue_item_sent_by">Sent by: %1$s</string>
    <string name="client_name_default">You</string>
    <string name="local_song_sendButton_label_send">Send</string>
    <string name="local_song_sendButton_label_sending">Sending…</string>
    <string name="local_song_sendButton_label_sent">Sent</string>
    <string name="login_hint_username">Username</string>
    <string name="edit_text_hint_password">Password</string>
    <string name="login_submit_text">Login</string>
    <string name="login_dialog_title">Login</string>
    <string name="login_username_default_text" translatable="false">admin</string>
    <string name="action_show_login">Admin Login</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="error_message_unauthenticated">Unauthorised</string>
    <string name="black_list_item_button_desc">Unblock user</string>
    <string name="song_item_duration_format">Duration: %1$s</string>
    <string name="error_message_song_not_in_queue">Song no longer in the queue</string>
    <string name="settings_key_server_address" translatable="false">server_url</string>
    <string name="settings_key_client_name" translatable="false">client_name</string>
    <string name="settings_key_queue_refresh_period" translatable="false">queue_period</string>
    <string name="statistics_layout_label_number_of_songs">Submitted songs</string>
    <string name="statistics_layout_label_number_of_users">Number of users</string>
    <string name="statistics_layout_label_number_of_song_removed">Removed songs</string>
    <string name="statistics_layout_label_duration_of_song">Average duration</string>
    <string name="error_message_too_many_concurrent_song_sent">Cannot send more than %1$d at the same time</string>
    <string name="default_mac_address" translatable="false">00:00:00:00:00:00</string>
    <string name="default_ip_address" translatable="false">0.0.0.0</string>
    <string name="block_submit_text">Block</string>
    <string name="block_dialog_title">Block User</string>
    <string name="block_user_action_label">Block User</string>
    <string name="settings_key_admin_password" translatable="false">admin_password</string>
    <string name="setting_title_admin_password">Change Password</string>
    <string name="setting_dialog_title_admin_password">Change Admin Password</string>
    <string name="password_change_dialog_old_password">Current Password</string>
    <string name="password_change_dialog_new_password">New Password</string>
    <string name="change_password_button_submit">Submit</string>
    <string name="no_name">&lt;No name&gt;</string>
    <string name="currently_playing">Currently Playing</string>
</resources>
