<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_reload"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_block_user"
        android:orderInCategory="100"
        android:icon="@drawable/account_off"
        android:title="@string/block_user_action_label"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_show_login"
        android:orderInCategory="101"
        android:title="@string/action_show_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="101"
        android:title="@string/action_disconnect"
        app:showAsAction="never"/>
</menu>
